fixed overflow on header box

--- a/assets/_source/less/inc/framework.less
+++ b/assets/_source/less/inc/framework.less
@@ -216,7 +216,10 @@ body {
 		max-width: 30em;
 	}
 	&.has_visual {
-		margin: -2em -2em 3em -2em;
+		margin: -1em -1em 3em -1em;
+		@media screen and (min-width: @screen-sm-min) {
+			margin: -2em -2em 3em -2em;
+		}
 		@media screen and (min-width: @screen-lg-min){
 			margin: 0 -4em 3em -4em;
 		}
@@ -264,9 +267,9 @@ body {
 	}
 	figure + & {
 		background: rgba(255,255,255,.7);
-		padding: 1.5em .5em 2em;
+		padding: 1.5em 1em 2em;
 		padding-top: 10vh;
-		margin-left: 1.5em;
+		margin-left: 1em;
 		@media screen and (min-width: @screen-lg-min){
 			margin-left: 2em;
 			padding: 0 2em 2em;
